ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/Statements/LabeledStatements/parser_duplicateLabel2/input.ts.stderr
error: Label target is already declared
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/Statements/LabeledStatements/parser_duplicateLabel2/input.ts:3:3
  |
3 |   target:
  |   ^^^^^^

